- Made optimizations for ability keybinds. - Made abilities sync manager actually work.